--- a/css/demo.css
+++ b/css/demo.css
@@ -153,4 +153,124 @@ button .fas {
 }
 .userAccount .dropdown #navbarDropdown {
   color: #fff;
+}
+
+/*******************************************************************
+***************************** Section area start********************
+********************************************************************/
+#topSection {
+  height: 81vh;
+  background: #f2f3f7;
+  /****************slider css***********************/
+  /*********************watch section***********************************/
+}
+#topSection .catagoriMenu ul {
+  padding-left: 0rem;
+}
+#topSection .catagoriMenu ul li {
+  background-color: #fff;
+  padding: 0.7rem 0rem;
+  position: relative;
+}
+#topSection .catagoriMenu ul li:hover {
+  background-color: #f7f7f7;
+  border-left: 2px solid #f33535;
+}
+#topSection .catagoriMenu ul li h3 {
+  padding: 0.1rem 0.8rem;
+  font-size: 1rem;
+  color: #fff;
+}
+#topSection .catagoriMenu ul li a {
+  padding: 0.1rem 0.8rem;
+  font-size: 0.8rem;
+  color: #807676;
+}
+#topSection .catagoriMenu ul li a span i {
+  font-size: 0.8rem;
+  position: absolute !important;
+  top: 19px;
+  right: 0.6rem;
+  color: #9a9292;
+}
+#topSection .background-red {
+  background: #f33535 !important;
+}
+#topSection .bg-color {
+  overflow: hidden !important;
+}
+#topSection .bg-color #carouselExampleControls {
+  position: relative;
+  height: 78vh !important;
+  background-color: #f8ddca;
+}
+#topSection .bg-color #carouselExampleControls .carousel-inner .carousel-item .slidertext {
+  width: 12rem;
+  margin-left: 5rem;
+  margin-bottom: 6rem;
+}
+#topSection .bg-color #carouselExampleControls .carousel-inner .carousel-item .slidertext h2 {
+  margin-bottom: 2rem;
+}
+#topSection .bg-color #carouselExampleControls .carousel-inner .carousel-item .slidertext p {
+  line-height: 0.6rem;
+}
+#topSection .bg-color #carouselExampleControls .carousel-inner .carousel-item .slidertext p span {
+  font-size: 1.6rem;
+  color: #f33535;
+}
+#topSection .bg-color #carouselExampleControls .carousel-inner .img-wrapper {
+  width: 65%;
+  height: 78vh;
+}
+#topSection .bg-color #carouselExampleControls .carousel-inner .img-wrapper img {
+  width: 100%;
+  margin-left: 0rem;
+}
+#topSection .bg-color #carouselExampleControls button {
+  position: absolute !important;
+  width: 28px !important;
+  height: 33px;
+  top: 44%;
+  border-radius: 5px !important;
+}
+#topSection .watchCol {
+  height: 65vh;
+}
+#topSection .watchCol .watch-div {
+  background-color: #95d2f1;
+  height: 56.7%;
+  position: relative;
+}
+#topSection .watchCol .watch-div .watch-content h4 {
+  position: relative;
+  margin-left: 0.6rem;
+  font-size: 1.3rem;
+}
+#topSection .watchCol .watch-div .watch-content h4:after {
+  content: "";
+  position: absolute;
+  top: 25px;
+  left: 2px;
+  background: #000;
+  width: 49%;
+  height: 8%;
+}
+#topSection .watchCol .watch-div .watch-content img {
+  width: 84%;
+  position: absolute;
+  top: 4.3rem;
+  right: 0rem;
+}
+#topSection .changeColor {
+  background: #f9cdda !important;
+}
+#topSection .changeColor h4:after {
+  content: "";
+  position: absolute;
+  top: 25px;
+  left: 2px;
+  background: #000;
+  width: 74% !important;
+  height: 8%;
 }/*# sourceMappingURL=demo.css.map */
